HHQ-1136, HHQ-1144 - text change and fix for table wrapping under

--- a/ui_plugins/public/hqu.css
+++ b/ui_plugins/public/hqu.css
@@ -333,17 +333,19 @@ font-weight:bold;
 /* Down Systems Page */
 
  .leftbxblueborder {border:1px solid #7BAFFF;overflow-y:auto;}
+ .downList{margin-right: 10px; width: 22%; float:left;display:inline;}
+
+.downTableContainer{border: 1px solid rgb(96, 165, 234); overflow-x: hidden; overflow-y: auto; float: right;display:inline; width: 75%; height: 442px;}
  .leftbxht {padding:3px;overflow-y:auto;height: 400px;}
  .boxLinks {padding:3px 3px 0px 5px;display:inline;}
  .right{float:right;}
  .left{float:left;}
  .tree {padding:3px;border-top:1px solid #BDBDBD;border-left:1px solid #BDBDBD;border-right:1px solid #BDBDBD;border-bottom:1px solid #BDBDBD;}
  .topCat {padding:3px;background-color:#E0EEEE;font-weight:bold;border:1px solid #BDBDBD;cursor:pointer;}
- .resourcetypelist {padding:5px; 3px 5px 3px;margin:0px;}
+ .resourcetypelist {padding:5px; 3px 5px 3px;margin:0px;font-size:11px;}
  #resourceTree ul {margin:0px;padding:0px;}
  #resourceTree li:hover { background:#d9dfe7;}
 .listItem {padding:3px; cursor:pointer;}
 .downContainer{margin-top:10px;margin-left:10px;margin-bottom:5px;padding-right:10px;}
-.downTableContainer{border: 1px solid rgb(96, 165, 234); overflow-x: hidden; overflow-y: auto; float: left; width: 70%; height: 442px;}
-.downList{margin-right: 10px; width: 260px; float:left}
+
 .countLinksActive{color: rgb(0, 51, 153); font-weight: bold; cursor: pointer;}
